# rust_website

./:  rust-toolchain.toml  Cargo.toml
assets/: title.blend
assets/animations/: can.glb
assets/meshes/: can.glb
assets/shaders/: background.wgsl  can.wgsl  chroma.wgsl  frame.wgsl  moon.wgsl  postprocess.wgsl
src/: background.rs  can.rs  component.rs  main.rs  material.rs  nws.rs  postprocess.rs  site.rs
src/nws/: content.rs  site.rs
