[package]
name = "website"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "vorbis",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_asset_loader = { version = "0.21" }
bevy_kira_audio = { version = "0.20", features = ["ogg", "mp3", "wav"] }
webbrowser = { version = "1", features = ["hardened"] }
rand = "0.8.5"
derivative = "2.2.0"
bevy_mod_billboard = "0.7.0"
bevy_easings = "0.14.0"
simple-easing = "1.0.1"
